--- a/docker/config/dev.yml
+++ b/docker/config/dev.yml
@@ -29,6 +29,8 @@ services:
   frontend:
     build:
       context: ../images/service
+    ports:
+      - "8080:8080"
     image: dms2223-service
     container_name: dms2223frontend
     volumes:
