--- a/components/dms2223backend/setup.cfg
+++ b/components/dms2223backend/setup.cfg
@@ -12,4 +12,5 @@ zip_safe = False
 include_package_data = True
 scripts =
     bin/dms2223backend
+    bin/dms2223backend-crear-ejemplo
 install_requires = sqlalchemy; sqlalchemy; flask; requests; pyyaml; connexion; connexion[swagger-ui]; dms2223common
