--- a/components/dms2223backend/dms2223backend/openapi/spec_rev.yml
+++ b/components/dms2223backend/dms2223backend/openapi/spec_rev.yml
@@ -133,6 +133,361 @@ paths:
       security:
         - user_token: []
           api_key: []
+  /questions/{qid}:
+    get:
+      summary: Gets a single question
+      operationId: dms2223backend.presentation.rest.preguntas.get_preg_id
+      parameters:
+        - $ref: '#/components/parameters/QuestionIdPathParam'
+      responses:
+        '200':
+          description: The full data of a question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/QuestionFullModel'
+              example:
+                qid: 1
+                title: 'Recommended size for the work groups?'
+                body: 'Which is the recommended size for the work groups in your opinion?'
+                owner:
+                  username: 'user1'
+                timestamp: 1665574089.0
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - discussion
+        - questions
+      security:
+        - user_token: []
+          api_key: []
+  /questions/{qid}/answers:
+    get:
+      summary: Gets the answers for a question
+      description: |
+        Fetches the full answers for a given question.
+      operationId: dms2223backend.presentation.rest.preguntas.get_preg_answers
+      parameters:
+        - $ref: '#/components/parameters/QuestionIdPathParam'
+      responses:
+        '200':
+          description: The answers for a question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/AnswersListModel'
+              example:
+                - id: 1
+                  qid: 1
+                  timestamp: 1665575089
+                  body: I would suggest four members.
+                  owner:
+                    username: user3
+                  votes: 4
+                  user_votes:
+                    user3: true
+                    user4: true
+                    user5: true
+                    user6: true
+                  comments:
+                    - id: 2
+                      aid: 1
+                      timestamp: 1665575389
+                      body: Evaluation criteria may be relaxed due to the tight number of members
+                      sentiment: POSITIVE
+                      owner:
+                        username: user4
+                      votes: 2
+                      user_votes:
+                        user6: true
+                        user5: true
+                    - id: 1
+                      aid: 1
+                      timestamp: 1665575289
+                      body: Enough to distribute the workload equitatively
+                      sentiment: POSITIVE
+                      owner:
+                        username: user4
+                      votes: 1
+                      user_votes:
+                        user6: true
+                    - id: 3
+                      aid: 1
+                      timestamp: 1665577389
+                      body: The deadline may be too close for the workload and a group this "small"
+                      sentiment: NEGATIVE
+                      owner:
+                        username: user4
+                      votes: 0
+                      user_votes: []
+                - id: 2
+                  qid: 1
+                  timestamp: 1665675089
+                  body: Five members.
+                  owner:
+                    username: user2
+                  votes: 2
+                  user_votes:
+                    user1: true
+                    user2: true
+                  comments:
+                    - id: 4
+                      aid: 2
+                      timestamp: 1665777389
+                      body: The teacher may be stricter if groups are too large
+                      sentiment: NEGATIVE
+                      owner:
+                        username: user4
+                      votes: 0
+                      user_votes: []
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - discussion
+        - questions
+        - answers
+      security:
+        - user_token: []
+          api_key: []
+    post:
+      summary: Answers a question
+      description: |
+        This operation creates an answer for an existing question.
+
+        The owner of the answer will be automatically retrieved from the
+        user token against the authorization server.
+      operationId: dms2223backend.presentation.rest.preguntas.set_preg_answers
+      parameters:
+        - $ref: '#/components/parameters/QuestionIdPathParam'
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/AnswerCreationModel'
+            example:
+              qid: 1
+              body: I would suggest four members.
+      responses:
+        '201':
+          description: The created answer.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/AnswerFullModel'
+              example:
+                id: 1
+                qid: 1
+                timestamp: 1665575089
+                body: I would suggest four members.
+                owner:
+                  username: user3
+                votes: 0
+                user_votes: {}
+                comments: []
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - discussion
+        - questions
+        - answers
+      security:
+        - user_token: []
+          api_key: []
+  /questions/{qid}/reports:
+    post:
+      summary: Reports a question
+      description: |
+        This operation will report a question to be reviewed by a moderator.
+
+        The owner of the report will be automatically retrieved from the
+        user token against the authorization server.
+      operationId: dms2223backend.presentation.rest.preguntas.set_preg_report
+      parameters:
+        - $ref: '#/components/parameters/QuestionIdPathParam'
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/QuestionReportCreationModel'
+            example:
+              reason: Promotes hate speech
+      responses:
+        '201':
+          description: The created report.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/QuestionReportFullModel'
+              example:
+                id: 1
+                qid: 2
+                reason: Promotes hate speech
+                status: PENDING
+                owner:
+                  username: user4
+                timestamp: 1665922785
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - discussion
+        - moderation
+        - questions
+        - reports
+      security:
+        - user_token: []
+          api_key: []
+  /questions/reports:
+    get:
+      summary: Get a list of question reports.
+      description: |
+        This operation gets a listing of question reports.
+
+        Several parameters can be used to filter out the reports according to
+        their status.
+      operationId: dms2223backend.presentation.rest.preguntas.get_all_reports
+      parameters:
+        - name: pending
+          description: |
+            Set to `false` to exclude the pending reports from the listing.
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - name: accepted
+          description: |
+            Set to `false` to exclude the accepted reports from the listing.
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - name: rejected
+          description: |
+            Set to `false` to exclude the rejected reports from the listing.
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: true
+      responses:
+        '200':
+          description: Listing of question reports
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/QuestionReportsListModel'
+              example:
+                - id: 1
+                  qid: 2
+                  reason: Promotes hate speech
+                  status: ACCEPTED
+                  owner:
+                    username: user4
+                  timestamp: 1665922785
+                - id: 2
+                  qid: 4
+                  reason: Not a question
+                  status: REJECTED
+                  owner:
+                    username: user5
+                  timestamp: 1665922785
+                - id: 3
+                  qid: 4
+                  reason: Question is too vague
+                  status: PENDING
+                  owner:
+                    username: user5
+                  timestamp: 1665922785
+      tags:
+        - moderation
+        - questions
+        - reports
+      security:
+        - user_token: []
+          api_key: []
+  /questions/reports/{qrid}:
+    put:
+      summary: Change the status of a question report
+      description: |
+        Use this operation to change the status of a question report.
+
+        When a report on a question is accepted, the linked question should be
+        hidden so neither the question nor its answers and comments are visible.
+      operationId: dms2223backend.presentation.rest.preguntas.put_preg_report
+      parameters:
+        - $ref: '#/components/parameters/QuestionReportIdPathParam'
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/ReportStatusChangeModel'
+            example:
+              status: ACCEPTED
+      responses:
+        '204':
+          $ref: '#/components/responses/ReportStatusChanged'
+        '404':
+          description: The question report does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question report with qrid 25 does not exist.'
+      tags:
+        - moderation
+        - questions
+        - reports
+      security:
+        - user_token: []
+          api_key: []  
+  /users:
+    get:
+      summary: Gets the existing users
+      description: |
+        Queries the storage to fetch the questions.
+
+        Only question stubs are returned. Full information for each question
+        should be fetched separately.
+      operationId: dms2223backend.presentation.rest.usuarios.get_allusers
+      responses:
+        '200':
+          description: A list of users.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/UserFullModel'
+              example:
+                - uid: 1
+                  username: 'User1'
+                - uid: 2
+                  username: 'User2'
+      tags:
+        - discussion
+        - user
+      security:
+        - api_key: []
+
 components:
   schemas:
     QuestionCoreModel:
@@ -443,6 +798,16 @@ components:
           enum:
             - POSITIVE
             - NEGATIVE
+    UserFullModel:
+      type: object
+      properties:
+        uid:
+          type: integer
+        username:
+          type: string
+      required:
+        - username
+        - uid
   parameters:
     IdentificadorPregunta:
       name: idpreg
@@ -479,6 +844,79 @@ components:
       schema:
         type: integer
       required: true
+    QuestionIdPathParam:
+      name: qid
+      description: Question identifier.
+      in: path
+      schema:
+        type: integer
+      required: true
+    AnswerIdPathParam:
+      name: aid
+      description: Answer identifier.
+      in: path
+      schema:
+        type: integer
+      required: true
+    CommentIdPathParam:
+      name: cid
+      description: Comment identifier.
+      in: path
+      schema:
+        type: integer
+      required: true
+    QuestionReportIdPathParam:
+      name: qrid
+      description: Question report identifier.
+      in: path
+      schema:
+        type: integer
+      required: true
+    AnswerReportIdPathParam:
+      name: arid
+      description: Answer report identifier.
+      in: path
+      schema:
+        type: integer
+      required: true
+    CommentReportIdPathParam:
+      name: crid
+      description: Comment report identifier.
+      in: path
+      schema:
+        type: integer
+      required: true
+
+  responses:
+    Empty:
+      description: An empty content.
+      content:
+        'text/plain':
+          schema:
+            $ref: '#/components/schemas/EmptyContentModel'
+          example: ''
+    ReportStatusChanged:
+      description: Report status successfully changed.
+      content:
+        'text/plain':
+          schema:
+            $ref: '#/components/schemas/EmptyContentModel'
+          example: ''
+    VoteCast:
+      description: Vote successfully cast.
+      content:
+        'text/plain':
+          schema:
+            $ref: '#/components/schemas/EmptyContentModel'
+          example: ''
+    VoteAlreadyCast:
+      description: Vote already cast.
+      content:
+        'text/plain':
+          schema:
+            $ref: '#/components/schemas/EmptyContentModel'
+          example: ''
+
   securitySchemes:
     user_token:
       description: |
