mejoras de calidad de acceso a datos

--- a/components/dms2223backend/dms2223backend/openapi/spec_rev.yml
+++ b/components/dms2223backend/dms2223backend/openapi/spec_rev.yml
@@ -266,7 +266,7 @@ paths:
 
         The owner of the answer will be automatically retrieved from the
         user token against the authorization server.
-      operationId: dms2223backend.presentation.rest.preguntas.set_preg_answers
+      operationId: dms2223backend.presentation.rest.preguntas.set_preg_answer
       parameters:
         - $ref: '#/components/parameters/QuestionIdPathParam'
       requestBody:
